[workspace]
name = "rt_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

members = [
    "rtlib",
    "rt",
    "rtmacros",
]

[profile.release]
opt-level = 3
debug = 2

[rtlib]
bench = false

[rt]
bench = false



