[package]
name = "rt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
rayon = "1.5.1"
rtlib = { path = "../rtlib" }
rtmacros = { path = "../rtmacros" }

[profile.release]
panic = 'abort'


[dev-dependencies]
criterion = "0.3"


[[bench]]
name = "bvh_bench"
harness = false
