[package]
name = "rt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.6", features = ["derive", "cargo"] }
rand = "0.8.4"
rayon = "1.5.1"
rtlib = { path = "../rtlib" }
rtmacros = { path = "../rtmacros" }

[profile.release]
panic = 'abort'
lto = true


[dev-dependencies]
criterion = { version = "0.3.5", features = ["html_reports"] }


[[bench]]
name = "bvh_bench"
harness = false

[[rt]]
name = "rt_rs"
bench = false
