[package]
name = "rtlib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libm = { version = "0.2.2" }
libmath = { version = "0.2.1" }
num = { version = "0.2.0" }
num-traits = { version = "0.2.8" }
rand = {version = "0.8.4"}
stb_image_rust = { version = "2.27.2" }

[lib]
name = "rtlib"
path = "src/lib.rs"

[profile.release]
panic = 'abort'

[dev-dependencies]
criterion = "0.3"


[[bench]]
name = "aabb"
harness = false
